[package]
name = "alive_boi"
version = "0.1.0"
authors = ["David Weis <davidmichaelweis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "*"
chrono = { version = "0.4", features = ["serde"] }
simplelog = "0.7"
log = "0.4"
